# autosig

./: .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  E2E_TEST_REPORT.md  IMMEDIATE_FIX_STEPS.md  QUICK_FIX_SUMMARY.md  RAILWAY_ARCHITECTURE.md  RAILWAY_CONFIG_NOTES.md  RAILWAY_SETUP.md  RAILWAY_WORKER_FIX.md  RAILWAY_WORKER_FORCE_FIX.md  README.md  REPLAY_DATA_EXTENSION.md  alpaca_option_resolver.py  alpaca_smoke_test.py  app_config.py  auto_mode.py  broker_alpaca.py  broker_health_checks.py  broker_smoke_tests.py  config.py  dashboard.py  dedupe_store.py  env_loader.py  execution_plan.py  fetch_history.py  jsonl_logger.py  jsonl_utils.py  main.py  market_session.py  market_window.py  mode_manager.py  models.py  paper_positions.py  parsed_signals.txt  parser.py  preflight.py  pyproject.toml  railway.toml  raw_alerts.txt  (+19 more)
attached_assets/: Pasted-Add-a-Risk-Mode-toggle-that-controls-what-strategies-ca_1766306617356.txt  Pasted-Add-a-Whop-Alerts-Health-Smoke-Test-button-a-SAFE-Paper_1766305841781.txt  Pasted-Add-a-reporting-system-to-this-Whop-parsing-trading-bot_1765578833334.txt  Pasted-Build-a-minimal-Flask-dashboard-in-this-Replit-project-_1765823018227.txt  Pasted-Change-LIVE-trading-warnings-UX-Remove-the-global-red-b_1766359768213.txt  Pasted-EXTEND-the-existing-Broker-Smoke-Test-dashboard-to-incl_1765823575619.txt  Pasted-Fix-Alpaca-paper-smoke-test-so-it-doesn-t-falsely-fail-_1766033511191.txt  Pasted-Fix-the-Tradier-environment-variable-issue-so-the-app-w_1766008918089.txt  Pasted-Implement-Broker-Health-Checks-PAPER-Mirroring-AUTO-MOD_1766100316668.txt  (+14 more)
(+26 files in other folders)
